@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-09-28T01:13:57Z",
+  "timestamp" : "2024-09-29T01:20:05Z",
   "count_outdated" : 1171,
   "uniques_outdated" : 700,
-  "count" : 1178,
-  "uniques" : 707,
+  "count" : 1179,
+  "uniques" : 708,
   "clones" : [
     {
       "timestamp": "2024-09-15T00:00:00Z",
@@ -52,6 +52,15 @@
     },
     {
       "timestamp": "2024-09-27T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-09-28T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
