@@ -1,6 +1,6 @@
 {
-  "count": 7,
-  "uniques": 6,
+  "count": 8,
+  "uniques": 7,
   "clones": [
     {
       "timestamp": "2024-09-15T00:00:00Z",
@@ -29,6 +29,11 @@
     },
     {
       "timestamp": "2024-09-27T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-09-28T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
